--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3": "^3.5.17",
     "flask": "^0.2.10",
     "pandas": "^0.0.3",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.3",
